<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/add"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/back_btn"
            android:contentDescription="@string/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="8dp"
            android:src="@drawable/back"
            />
        <TextView
            android:id="@+id/title_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_note"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:padding="8dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp" >
        <EditText
            android:id="@+id/add_title"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:padding="8dp"
            android:textSize="18sp"
            android:hint="@string/title_hint"
            android:textColorHint="@color/darkgray"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/add_content"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|top"
        android:padding="8dp"
        android:textSize="18sp"
        android:hint="@string/content_hint"
        android:textColorHint="@color/darkgray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:contentDescription="@string/clear_btn"
            android:id="@+id/clear_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@color/blue"
            android:src="@drawable/refresh"/>
        <ImageButton
            android:contentDescription="@string/save_btn"
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@color/blue"
            android:src="@drawable/save"/>
    </LinearLayout>
</LinearLayout>