<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableRow>
            <ImageView
                android:contentDescription="@string/word_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:src="@drawable/yes"
                />
            <Button
                android:id="@+id/delete_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/delete_yes"
                android:background="@color/darkblue" />
        </TableRow>
        <TableRow>
            <ImageView
                android:contentDescription="@string/word_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="12dp"
                android:src="@drawable/no"
                />
            <Button
                android:id="@+id/delete_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/delete_no"
                android:background="@color/darkblue" />
        </TableRow>
    </TableLayout>
    </TableLayout>