<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/skin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_btn"
            android:background="@color/blue"
            android:padding="8dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/update_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/update_note"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/update_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:contentDescription="@string/delete_btn"
            android:padding="8dp"
            android:src="@drawable/delete" />

        <ImageButton
            android:id="@+id/confirm_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:contentDescription="@string/confirm_btn"
            android:padding="8dp"
            android:src="@drawable/ok" />
    </LinearLayout>

</LinearLayout>