<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/title_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:contentDescription="@string/search_btn"
            android:padding="8dp"
            android:src="@drawable/search"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/notes_frm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray" >

        <ListView
            android:id="@+id/notes_lis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@null"
            android:scrollbars="vertical"
            android:visibility="gone"
            android:divider="#00000000"
            android:dividerHeight="8dp"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <ImageButton
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/blue"
            android:contentDescription="@string/add_btn"
            android:padding="8dp"
            android:src="@drawable/add"/>

    </LinearLayout>
</LinearLayout>
